--- a/headerrc-default.yml
+++ b/headerrc-default.yml
@@ -1,3 +1,7 @@
+# This file containers the default values for this action.
+# Any items added to the .headerrc file will be *merged* with this one.
+# Duplicate values will be overwritten from the .headerrc.
+
 name: This file is used to set configuration for the add-header action
 
 # Automatically add everything in the .gitignore file into the untracked_files section
@@ -38,4 +42,4 @@ file_associations_by_extension: # Format = Regex for file match: List[prefix, su
 
 # For files that have 'important' first lines, use this setting to move the header below that line
 skip_lines_that_start_with: # Format = Regex for file match: List|str 
-  ".sh$": ["#!"]
+  ".sh$": ["^#!"]
