--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,10 @@ inputs:
     description: 'Do not actually make changes, instead effect files are viewable in the logs'
     required: false
     default: "false"
+  something-else:
+    description: 'something-else'
+    required: false
+    default: "false"
 
 outputs:
   time: # id of output
@@ -21,4 +25,5 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.dry-run }}
+    - "--dry-run ${{ inputs.dry-run }}"
+    - --something-else ${{ something-else }}"
