--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -17,8 +17,8 @@ jobs:
       uses: ./ # Uses an action in the root directory
       id: add-header-action
       with:
-        dry-run: --dry-run true
-        something-else: --something-else false
+        dry-run: true
+        something-else: false
 
     - name: Get the output of add-header-action
       run: echo "add-header-action Ouput is ${{ steps.add-header-action.outputs }}"
