--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -2,9 +2,9 @@ name: Add header
 
 on:
   workflow_dispatch: # Allow manually running
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
 
 jobs:
   build:
