--- a/action.yml
+++ b/action.yml
@@ -25,5 +25,5 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
+    - -l # Required
     - --dry-run ${{ inputs.dry-run }}
-    - --something-else ${{ inputs.something-else }}
