--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,7 @@ services:
       - C:\Users\James-PC\IdeaProjects\add-header-action:/github/workspace
     # Use this to keep the container open so you can shell inside it
     # entrypoint: ["tail", "-f", "/dev/null"]
-    command: |
-     --dry-run true  
+    command: "--dry-run false"
+    environment:
+      - TEST_DOCKER=true
+      - DRY_RUN=false
