--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -22,5 +22,7 @@ jobs:
     - name: Get the output of add-header-action
       run: echo "add-header-action Ouput is ${{ steps.add-header-action.outputs }}"
 
+    - name: Commit changes back to repo
+      uses: stefanzweifel/git-auto-commit-action@v5
 
 
