Disable dry run

--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -17,7 +17,7 @@ jobs:
       uses: ./ # Uses an action in the root directory
       id: add-header-action
       with:
-        dry-run: true
+        dry-run: false
 
     - name: Get the output of add-header-action
       run: echo "add-header-action Ouput is ${{ steps.add-header-action.outputs }}"
