--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -24,5 +24,7 @@ jobs:
 
     - name: Commit changes back to repo
       uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        token: ${{ secrets.PAT }}
 
 
