--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,10 @@ inputs:
     description: 'Do not actually make changes, instead effected files are viewable in the logs'
     required: false
     default: "false"
+  verbose:
+    description: 'Add more output to the console for debugging'
+    required: false
+    default: "false"
 
 outputs:
   time: # id of output
@@ -24,3 +28,6 @@ runs:
   args:
     - --dry-run
     - ${{ inputs.dry-run }}
+    - --verbose
+    - ${{ inputs.verbose }}
+
