--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# SUPER SECRET CONFIDENTIAL 
+# [2023] - [Infinity and Beyond] ACME CO 
+# All Rights Reserved. 
+# NOTICE: This is super secret info that 
+# must be protected at all costs. 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
