--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,4 +1,4 @@
-name: Python Lint
+name: Python Lint & Test
 
 on:
   workflow_dispatch: # Allow manually running
@@ -20,11 +20,11 @@ jobs:
       
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python3 -m pip install -r requirements.txt
+      # python -m pip install --upgrade pip
 
     - name: Black formatter check
-      run: black app --check --verbose
+      run: black --line-length 120 --check --verbose app
 
-    # - name: Run Pytest
-    #   run: pytest --testdox -rAs 
+    - name: Run Pytest
+      run: python3 -m pytest --cov app
