--- a/headerrc-default.yml
+++ b/headerrc-default.yml
@@ -1,9 +1,3 @@
-# SUPER SECRET CONFIDENTIAL 
-# [2023] - [Infinity and Beyond] ACME CO 
-# All Rights Reserved. 
-# NOTICE: This is super secret info that 
-# must be protected at all costs. 
-
 # This file containers the default values for this action.
 # Any items added to the .headerrc file will be *merged* with this one.
 # Duplicate values will be overwritten from the .headerrc.
@@ -32,7 +26,7 @@ untracked_files:
 # This can save lots of time because most of these files can be ignored.
 untrack_gitignore: true
 
-negagate_characters: "!"
+negate_characters: "!"
 
 # With this enabled, the following settings are not loaded, and must be provided from the .headerrc file.
 # tracked_files, untracked_files, file_associations_by_comment, file_associations_by_extension, skip_lines_that_have
@@ -42,7 +36,7 @@ use_default_file_settings: true
 header: |
   SUPER SECRET CONFIDENTIAL
 
-  [2023] - [Infinity and Beyond] ACME CO
+  [2023] - [Infinity and Beyond] ACME Inc
   All Rights Reserved.
   
   NOTICE: This is super secret info that
