--- a/headerrc-default.yml
+++ b/headerrc-default.yml
@@ -170,3 +170,4 @@ file_associations_by_extension: # Format = Regex for file match: List[prefix, su
 # For files that have 'important' first lines, use this setting to move the header below that line
 skip_lines_that_have: # Format = Regex for file match: List|str 
   "\\.sh$": ["^#!"]
+  "\\.html$": ["<!DOCTYPE"]
