--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,12 +39,12 @@
 					}
 				},
 				// Python settings
-				"python.testing.pytestArgs": [
-					"."
-				],
-				"python.testing.unittestEnabled": false,
 				"python.testing.pytestEnabled": true,
-				"python.linting.enabled": true,
+				"python.testing.unittestEnabled": false,
+				"python.testing.pytestArgs": [
+					"-s"
+				],
+				"python.analysis.inlayHints.pytestParameters": true,
 				"python.formatting.provider": "none",
 				"[python]": {
 					"editor.defaultFormatter": "ms-python.black-formatter"
@@ -55,7 +55,10 @@
 					"*.env": "shellscript",
 					"*.json5": "jsonc"
 				},
-				"black-formatter.args": ["--line-length", "120"]
+				"black-formatter.args": [
+					"--line-length",
+					"120"
+				]
 			}
 		}
 	},
