--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -25,7 +25,7 @@ jobs:
       run: python3 -m black --line-length 120 --check --verbose app
     
     - name: Run Pytest
-      working-directory: .
+      working-directory: /home/runner/work/add-header-action/add-header-action
       run: |
         PYTHONPATH=.
         python3 -m pytest -r . --cov app --cov-report html --cov-report term --cov-report xml
