--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -21,11 +21,9 @@ jobs:
     - name: Install dependencies
       run: python3 -m pip install -r requirements.txt
 
-    - name: Black formatter check
-      run: python3 -m black --line-length 120 --check --verbose app
+    # - name: Black formatter check
+    #   run: python3 -m black --line-length 120 --check --verbose app
     
     - name: Run Pytest
-      working-directory: /home/runner/work/add-header-action/add-header-action
       run: |
-        PYTHONPATH=.
-        python3 -m pytest -r . --cov app --cov-report html --cov-report term --cov-report xml
+        pytest --cov app --cov-report html --cov-report term --cov-report xml
