--- a/headerrc-default.yml
+++ b/headerrc-default.yml
@@ -17,6 +17,7 @@ tracked_files:
 untracked_files:
   - ^\.git/ # Very important to ignore
   - ^\.gitignore
+  - ^LICENSE$
   - __init__.py$ # These are just empty files
   - \.json$ # Most json files cannot contain comments
 
