--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - main
-      - dev # TODO: REMOVE (and fix uses below)
 
 jobs:
   build:
@@ -17,8 +16,7 @@ jobs:
         token: ${{ secrets.PAT }}
     
     - name: Add header action step
-      # uses: ./ # Uses an action in the root directory
-      uses: minituff/add-header-action@dev # Change this to be the latest version, SHA, or branch name
+      uses: minituff/add-header-action@v1 # Change this to be the latest version, SHA, or branch name
       with:
         dry-run: true
         verbose: true
