Remove lingering print statement

--- a/.github/workflows/add-header.yml
+++ b/.github/workflows/add-header.yml
@@ -25,5 +25,7 @@ jobs:
 
     - name: Commit changes back to repo
       uses: stefanzweifel/git-auto-commit-action@v5
-        # Token comes from actions/checkout
+      with:  # Token comes from actions/checkout
+        commit_message: Add Header
+       
  
