--- a/headerrc-default.yml
+++ b/headerrc-default.yml
@@ -4,6 +4,10 @@
 
 name: This file is used to set configuration for the add-header action
 
+# Choose what to do with the header.
+# If "remove" is used, the header will only be removed if it matches exactly.
+header_action: add  # Options: add, remove. Default: add
+
 # Decide the method for choosing which files to add headers to
 # opt-out  =  all files will be selected unless the file path matches untracked_files
 # opt-in   =  no  files will be selected unless the file path matches anything in tracked_files
