--- a/.github/.headerrc.yml
+++ b/.github/.headerrc.yml
@@ -2,7 +2,7 @@ name: This file is used to set configuration for the add-header action
 
 # Choose what to do with the header. [add, remove]
 # If "remove" is used, the header will only be removed if it matches exactly.
-header_action: remove # Options: add, remove. Default: add
+header_action: add # Options: add, remove. Default: add
 
 # Decide the method for choosing which files to add headers to
 # opt-out  =  all files will be selected unless the file path matches untracked_files
