--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -2,6 +2,13 @@ name: Python Lint & Test
 
 on:
   workflow_dispatch: # Allow manually running
+  workflow_call: # Allow another workflow to call this one
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - edited
+      - synchronize
   push:
     branches:
       - main
