--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,8 @@
+; SUPER SECRET CONFIDENTIAL 
+; [2023] - [Infinity and Beyond] ACME CO 
+; All Rights Reserved. 
+; NOTICE: This is super secret info that 
+; must be protected at all costs. 
+
 [pytest]
 pythonpath = app
